--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <div id="unity-container" class="unity-desktop">
-      <h1>Maintenance work...</h1>
-      <h2>
+      <h1 style="font-size: 36px; color: white; text-align: center">
+        Maintenance work...
+      </h1>
+      <h2 style="text-align: center; font-size: 22px; color: #5e779b; max-width: 730px">
         We are implementing new anti-cheat system for your safety. Game will be available
         in two days.
       </h2>
