--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
 		<link rel="stylesheet" href="TemplateData/style.css" />
 		<meta name="viewport" content="width=device-width,initial-scale=1" />
 		<script src="network.js"></script>
+		<!-- Hotjar Tracking Code for https://www.inthewoods.fun/ -->
+		<script>
+			(function (h, o, t, j, a, r) {
+				h.hj =
+					h.hj ||
+					function () {
+						(h.hj.q = h.hj.q || []).push(arguments);
+					};
+				h._hjSettings = { hjid: 2810579, hjsv: 6 };
+				a = o.getElementsByTagName('head')[0];
+				r = o.createElement('script');
+				r.async = 1;
+				r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+				a.appendChild(r);
+			})(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
+		</script>
 		<link rel="manifest" href="./manifest.json" />
 		<link href="./static/css/main.1359096b.chunk.css" rel="stylesheet" />
 	</head>
